gcc/testsuite/rust.test/compilable/tuple2.rs
fn main() {
    let a = 123;
    let b = (a,);
}
